--- a/Basic_R/lecture/Basic_R.html
+++ b/Basic_R/lecture/Basic_R.html
@@ -97,7 +97,7 @@
 <slide class=''><hgroup><h2>Getting Started</h2></hgroup><article  id="getting-started">
 
 <ul>
-<li>You should have the latest version of R installed (R 3.2.0 as of 6/15/2015)!</li>
+<li>You should have the latest version of R installed!</li>
 <li>Open R Studio</li>
 <li>Files &#8211;&gt; New &#8211;&gt; R Script</li>
 <li>Save the blank R script as &quot;day1.R&quot; in a directory of your choosing</li>
@@ -108,7 +108,7 @@
 
 <p>Add a comment header to day1.R :<code>#</code> is the comment symbol</p>
 
-<pre >#################
+<pre class = 'prettyprint lang-r'>#################
 # Title: Demo R Script
 # Author: Andrew Jaffe
 # Date: 6/15/2015
@@ -131,7 +131,7 @@
 
 <pre class = 'prettyprint lang-r'>print(&quot;I&#39;m code&quot;)</pre>
 
-<pre >## [1] &quot;I&#39;m code&quot;</pre>
+<pre >[1] &quot;I&#39;m code&quot;</pre>
 
 <p>And then directly after it, will be the output of the code.<br/>So <code>print(&quot;I&#39;m code&quot;)</code> is the code chunk and [1] &quot;I&#39;m code&quot; is the output.</p>
 
@@ -139,15 +139,15 @@
 
 <pre class = 'prettyprint lang-r'>2 + 2</pre>
 
-<pre >## [1] 4</pre>
+<pre >[1] 4</pre>
 
 <pre class = 'prettyprint lang-r'>2 * 4</pre>
 
-<pre >## [1] 8</pre>
+<pre >[1] 8</pre>
 
-<pre class = 'prettyprint lang-r'>2^3</pre>
+<pre class = 'prettyprint lang-r'>2 ^ 3</pre>
 
-<pre >## [1] 8</pre>
+<pre >[1] 8</pre>
 
 <p>Note, when you type your command, R inherently thinks you want to print the result.</p>
 
@@ -168,11 +168,11 @@
 
 <pre class = 'prettyprint lang-r'>2 + (2 * 3)^2</pre>
 
-<pre >## [1] 38</pre>
+<pre >[1] 38</pre>
 
 <pre class = 'prettyprint lang-r'>(1 + 3) / 2 + 45</pre>
 
-<pre >## [1] 47</pre>
+<pre >[1] 47</pre>
 
 </article></slide><slide class=''><hgroup><h2>R as a calculator</h2></hgroup><article  id="r-as-a-calculator-3">
 
@@ -195,15 +195,15 @@
 <pre class = 'prettyprint lang-r'>x = 2 # Same as: x &lt;- 2
 x</pre>
 
-<pre >## [1] 2</pre>
+<pre >[1] 2</pre>
 
 <pre class = 'prettyprint lang-r'>x * 4</pre>
 
-<pre >## [1] 8</pre>
+<pre >[1] 8</pre>
 
 <pre class = 'prettyprint lang-r'>x + 2</pre>
 
-<pre >## [1] 4</pre>
+<pre >[1] 4</pre>
 
 </article></slide><slide class=''><hgroup><h2>R variables</h2></hgroup><article  id="r-variables">
 
@@ -262,16 +262,16 @@ x</pre>
 
 <pre class = 'prettyprint lang-r'>class(x)</pre>
 
-<pre >## [1] &quot;numeric&quot;</pre>
+<pre >[1] &quot;numeric&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>y = &quot;hello world!&quot;
 print(y)</pre>
 
-<pre >## [1] &quot;hello world!&quot;</pre>
+<pre >[1] &quot;hello world!&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>class(y)</pre>
 
-<pre >## [1] &quot;character&quot;</pre>
+<pre >[1] &quot;character&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>R variables</h2></hgroup><article  id="r-variables-3">
 
@@ -284,7 +284,7 @@ print(y)</pre>
 <pre class = 'prettyprint lang-r'>name = &quot;Andrew Jaffe&quot;
 name</pre>
 
-<pre >## [1] &quot;Andrew Jaffe&quot;</pre>
+<pre >[1] &quot;Andrew Jaffe&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>The &#39;combine&#39; function</h2></hgroup><article  id="the-combine-function">
 
@@ -293,11 +293,11 @@ name</pre>
 <pre class = 'prettyprint lang-r'>x &lt;- c(1, 4, 6, 8)
 x</pre>
 
-<pre >## [1] 1 4 6 8</pre>
+<pre >[1] 1 4 6 8</pre>
 
 <pre class = 'prettyprint lang-r'>class(x)</pre>
 
-<pre >## [1] &quot;numeric&quot;</pre>
+<pre >[1] &quot;numeric&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>The &#39;combine&#39; function</h2></hgroup><article  id="the-combine-function-1">
 
@@ -310,7 +310,7 @@ x</pre>
 <pre class = 'prettyprint lang-r'>name2 = c(&quot;Andrew&quot;,&quot;Jaffe&quot;)
 name2</pre>
 
-<pre >## [1] &quot;Andrew&quot; &quot;Jaffe&quot;</pre>
+<pre >[1] &quot;Andrew&quot; &quot;Jaffe&quot; </pre>
 
 </article></slide><slide class=''><hgroup><h2>R variables</h2></hgroup><article  id="r-variables-5">
 
@@ -318,15 +318,15 @@ name2</pre>
 
 <pre class = 'prettyprint lang-r'>length(x)</pre>
 
-<pre >## [1] 4</pre>
+<pre >[1] 4</pre>
 
 <pre class = 'prettyprint lang-r'>y</pre>
 
-<pre >## [1] &quot;hello world!&quot;</pre>
+<pre >[1] &quot;hello world!&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>length(y)</pre>
 
-<pre >## [1] 1</pre>
+<pre >[1] 1</pre>
 
 </article></slide><slide class=''><hgroup><h2>R variables</h2></hgroup><article  id="r-variables-6">
 
@@ -342,11 +342,11 @@ name2</pre>
 
 <pre class = 'prettyprint lang-r'>length(name)</pre>
 
-<pre >## [1] 1</pre>
+<pre >[1] 1</pre>
 
 <pre class = 'prettyprint lang-r'>length(name2)</pre>
 
-<pre >## [1] 2</pre>
+<pre >[1] 2</pre>
 
 </article></slide><slide class=''><hgroup><h2>R variables</h2></hgroup><article  id="r-variables-8">
 
@@ -354,15 +354,15 @@ name2</pre>
 
 <pre class = 'prettyprint lang-r'>x + 2</pre>
 
-<pre >## [1]  3  6  8 10</pre>
+<pre >[1]  3  6  8 10</pre>
 
 <pre class = 'prettyprint lang-r'>x * 3</pre>
 
-<pre >## [1]  3 12 18 24</pre>
+<pre >[1]  3 12 18 24</pre>
 
 <pre class = 'prettyprint lang-r'>x + c(1, 2, 3, 4)</pre>
 
-<pre >## [1]  2  6  9 12</pre>
+<pre >[1]  2  6  9 12</pre>
 
 </article></slide><slide class=''><hgroup><h2>R variables</h2></hgroup><article  id="r-variables-9">
 
@@ -379,7 +379,7 @@ name2</pre>
 <pre class = 'prettyprint lang-r'>y = x + c(1, 2, 3, 4)
 y </pre>
 
-<pre >## [1]  2  6  9 12</pre>
+<pre >[1]  2  6  9 12</pre>
 
 <p>Note that the R object <code>y</code> is no longer &quot;Hello World!&quot; - It has effectively been overwritten by assigning new data to the variable</p>
 
@@ -391,23 +391,13 @@ y </pre>
 
 <pre class = 'prettyprint lang-r'>str(x)</pre>
 
-<pre >##  num [1:4] 1 4 6 8</pre>
+<pre > num [1:4] 1 4 6 8</pre>
 
 <pre class = 'prettyprint lang-r'>str(y)</pre>
 
-<pre >##  num [1:4] 2 6 9 12</pre>
+<pre > num [1:4] 2 6 9 12</pre>
 
 <p>This tells you that <code>x</code> is a numeric vector and tells you the length.</p>
-
-</article></slide><slide class=''><hgroup><h2>Basic Summarization</h2></hgroup><article  id="basic-summarization">
-
-<p>Here are some simple functions for making calculations on data.</p>
-
-<p><code>sum()</code>: takes the sum of all numeric variables in a vector</p>
-
-<p><code>mean()</code>: takes the mean of all numeric variables in a vector</p>
-
-<p><code>median()</code>: takes the median of all numeric variables in a vector</p>
 
 </article></slide><slide class=''><hgroup><h2>Back to our <code>data.frame</code> example</h2></hgroup><article  id="back-to-our-data.frame-example" class="smaller">
 
@@ -417,22 +407,22 @@ y </pre>
 
 <pre class = 'prettyprint lang-r'>str(Charm_City_Circulator_Ridership)</pre>
 
-<pre >## &#39;data.frame&#39;:    1146 obs. of  15 variables:
-##  $ day             : Factor w/ 7 levels &quot;Friday&quot;,&quot;Monday&quot;,..: 2 6 7 5 1 3 4 2 6 7 ...
-##  $ date            : Factor w/ 1146 levels &quot;01/01/2011&quot;,&quot;01/01/2012&quot;,..: 31 35 39 43 47 51 55 59 63 67 ...
-##  $ orangeBoardings : int  877 777 1203 1194 1645 1457 839 999 1023 1375 ...
-##  $ orangeAlightings: int  1027 815 1220 1233 1643 1524 938 1000 1047 1416 ...
-##  $ orangeAverage   : num  952 796 1212 1214 1644 ...
-##  $ purpleBoardings : int  NA NA NA NA NA NA NA NA NA NA ...
-##  $ purpleAlightings: int  NA NA NA NA NA NA NA NA NA NA ...
-##  $ purpleAverage   : num  NA NA NA NA NA NA NA NA NA NA ...
-##  $ greenBoardings  : int  NA NA NA NA NA NA NA NA NA NA ...
-##  $ greenAlightings : int  NA NA NA NA NA NA NA NA NA NA ...
-##  $ greenAverage    : num  NA NA NA NA NA NA NA NA NA NA ...
-##  $ bannerBoardings : int  NA NA NA NA NA NA NA NA NA NA ...
-##  $ bannerAlightings: int  NA NA NA NA NA NA NA NA NA NA ...
-##  $ bannerAverage   : num  NA NA NA NA NA NA NA NA NA NA ...
-##  $ daily           : num  952 796 1212 1214 1644 ...</pre>
+<pre >&#39;data.frame&#39;:   1146 obs. of  15 variables:
+ $ day             : Factor w/ 7 levels &quot;Friday&quot;,&quot;Monday&quot;,..: 2 6 7 5 1 3 4 2 6 7 ...
+ $ date            : Factor w/ 1146 levels &quot;01/01/2011&quot;,&quot;01/01/2012&quot;,..: 31 35 39 43 47 51 55 59 63 67 ...
+ $ orangeBoardings : int  877 777 1203 1194 1645 1457 839 999 1023 1375 ...
+ $ orangeAlightings: int  1027 815 1220 1233 1643 1524 938 1000 1047 1416 ...
+ $ orangeAverage   : num  952 796 1212 1214 1644 ...
+ $ purpleBoardings : int  NA NA NA NA NA NA NA NA NA NA ...
+ $ purpleAlightings: int  NA NA NA NA NA NA NA NA NA NA ...
+ $ purpleAverage   : num  NA NA NA NA NA NA NA NA NA NA ...
+ $ greenBoardings  : int  NA NA NA NA NA NA NA NA NA NA ...
+ $ greenAlightings : int  NA NA NA NA NA NA NA NA NA NA ...
+ $ greenAverage    : num  NA NA NA NA NA NA NA NA NA NA ...
+ $ bannerBoardings : int  NA NA NA NA NA NA NA NA NA NA ...
+ $ bannerAlightings: int  NA NA NA NA NA NA NA NA NA NA ...
+ $ bannerAverage   : num  NA NA NA NA NA NA NA NA NA NA ...
+ $ daily           : num  952 796 1212 1214 1644 ...</pre>
 
 </article></slide><slide class=''><hgroup><h2>Review</h2></hgroup><article  id="review">
 
