end of day push

--- a/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.html
+++ b/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.html
@@ -262,20 +262,8 @@ df = data.frame(x = c(1, 2, 4, 10, 10),
 
 <p>The <code>select</code> command from <code>dplyr</code> allows you to subset</p>
 
-<pre class = 'prettyprint lang-r'>library(dplyr)</pre>
-
-<pre >
-Attaching package: &#39;dplyr&#39;
-
-The following objects are masked from &#39;package:stats&#39;:
-
-    filter, lag
-
-The following objects are masked from &#39;package:base&#39;:
-
-    intersect, setdiff, setequal, union</pre>
-
-<pre class = 'prettyprint lang-r'>select(df, x)</pre>
+<pre class = 'prettyprint lang-r'>library(dplyr)
+select(df, x)</pre>
 
 <pre >   x
 1  1
