--- a/Data_IO/lecture/Data_IO.html
+++ b/Data_IO/lecture/Data_IO.html
@@ -149,8 +149,7 @@ getwd()
 </article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input">
 
 <ul>
-<li>We used several pre-installed sample datasets during previous modules (<code>CO2</code>, <code>iris</code>)</li>
-<li>However, &#39;reading in&#39; data is the first step of any real project/analysis</li>
+<li>&#39;Reading in&#39; data is the first step of any real project/analysis</li>
 <li>R can read almost any file format, especially via add-on packages</li>
 <li>We are going to focus on simple delimited files first
 
@@ -224,7 +223,7 @@ read.table( file, # filename
     fill = TRUE, comment.char = &quot;&quot;, ...) 
 read.table(file = file, header = header, sep = sep, quote = quote, 
     dec = dec, fill = fill, comment.char = comment.char, ...)
-&lt;bytecode: 0x105a549f8&gt;
+&lt;bytecode: 0x000000000623d250&gt;
 &lt;environment: namespace:utils&gt;</pre>
 
 <p>Note: the <code>...</code> designates extra/optional arguments that can be passed to <code>read.table()</code> if needed</p>
