--- a/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.html
+++ b/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.html
@@ -95,15 +95,17 @@
 
 <slide class=''><hgroup><h2>Overview</h2></hgroup><article  id="overview">
 
-<p>You can read data into R using <em>read.csv</em>. In this module, we will show you how to:</p>
+<p>We showed one way to read data into R using <em>read.csv</em>. In this module, we will show you how to:</p>
 
 <ol>
 <li>Select specific elements of an object by an index or logical condition</li>
+<li>Renaming columns of a <code>data.frame</code></li>
 <li>Subset rows of a <code>data.frame</code></li>
 <li>Subset columns of a <code>data.frame</code></li>
 <li>Add/remove new columns to a <code>data.frame</code></li>
 <li>Order the columns of a <code>data.frame</code></li>
 <li>Order the rows of a <code>data.frame</code></li>
+<li>Perform operations by a grouping variable</li>
 </ol>
 
 </article></slide><slide class=''><hgroup><h2>Setup</h2></hgroup><article  id="setup">
@@ -221,9 +223,102 @@ df = data.frame(x = c(1, 2, 4, 10, 10),
                 z = rpois(5, 6)
                 )</pre>
 
+</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Renaming Columns</h2></hgroup><article  id="renaming-columns">
+
+</article></slide><slide class=''><hgroup><h2>Renaming Columns of a <code>data.frame</code>: base R</h2></hgroup><article  id="renaming-columns-of-a-data.frame-base-r">
+
+<p>We can use the <code>colnames</code> function to directly reassign column names of <code>df</code>:</p>
+
+<pre class = 'prettyprint lang-r'>colnames(df) = c(&quot;x&quot;, &quot;X&quot;, &quot;y&quot;, &quot;z&quot;)
+head(df)</pre>
+
+<pre >   x  X          y  z
+1  1  7 -0.2707606  6
+2  2  6 -1.1179372  4
+3  4 10 -1.3473558  7
+4 10 13  0.4832675 10
+5 10 13  0.1523950  5</pre>
+
+<pre class = 'prettyprint lang-r'>colnames(df) = c(&quot;x&quot;, &quot;x2&quot;, &quot;y&quot;, &quot;z&quot;) #reset</pre>
+
+</article></slide><slide class=''><hgroup><h2>Renaming Columns of a <code>data.frame</code>: base R</h2></hgroup><article  id="renaming-columns-of-a-data.frame-base-r-1">
+
+<p>We can assign the column names, change the ones we want, and then re-assign the column names:</p>
+
+<pre class = 'prettyprint lang-r'>cn = colnames(df)
+cn[ cn == &quot;x2&quot;] = &quot;X&quot;
+colnames(df) = cn
+head(df)</pre>
+
+<pre >   x  X          y  z
+1  1  7 -0.2707606  6
+2  2  6 -1.1179372  4
+3  4 10 -1.3473558  7
+4 10 13  0.4832675 10
+5 10 13  0.1523950  5</pre>
+
+<pre class = 'prettyprint lang-r'>colnames(df) = c(&quot;x&quot;, &quot;x2&quot;, &quot;y&quot;, &quot;z&quot;) #reset</pre>
+
+</article></slide><slide class=''><hgroup><h2>Renaming Columns of a <code>data.frame</code>: dplyr</h2></hgroup><article  id="renaming-columns-of-a-data.frame-dplyr">
+
+<pre class = 'prettyprint lang-r'>library(dplyr)</pre>
+
+<pre >
+Attaching package: &#39;dplyr&#39;
+
+The following objects are masked from &#39;package:stats&#39;:
+
+    filter, lag
+
+The following objects are masked from &#39;package:base&#39;:
+
+    intersect, setdiff, setequal, union</pre>
+
+<p>Note, when loading <code>dplyr</code>, it says objects can be &quot;masked&quot;. That means if you use a function defined in 2 places, it uses the one that is loaded in <strong>last</strong>.</p>
+
+</article></slide><slide class=''><hgroup><h2>Renaming Columns of a <code>data.frame</code>: dplyr</h2></hgroup><article  id="renaming-columns-of-a-data.frame-dplyr-1">
+
+<p>For example, if we print <code>filter</code>, then we see at the bottom <code>namespace:dplyr</code>, which means when you type <code>filter</code>, it will use the one from the <code>dplyr</code> package.</p>
+
+<pre class = 'prettyprint lang-r'>filter</pre>
+
+<pre >function (.data, ...) 
+{
+    filter_(.data, .dots = lazyeval::lazy_dots(...))
+}
+&lt;environment: namespace:dplyr&gt;</pre>
+
+</article></slide><slide class=''><hgroup><h2>Renaming Columns of a <code>data.frame</code>: dplyr</h2></hgroup><article  id="renaming-columns-of-a-data.frame-dplyr-2">
+
+<p>A <code>filter</code> function exists by default in the <code>stats</code> package, however. If you want to make sure you use that one, you use <code>PackageName::Function</code> with the colon-colon (&quot;<code>::</code>&quot;) operator.</p>
+
+<pre class = 'prettyprint lang-r'>head(stats::filter,2)</pre>
+
+<pre >                                                               
+1 function (x, filter, method = c(&quot;convolution&quot;, &quot;recursive&quot;), 
+2     sides = 2L, circular = FALSE, init = NULL)               </pre>
+
+<p>This is important when loading many packages, and you may have some conflicts/masking:</p>
+
+</article></slide><slide class=''><hgroup><h2>Renaming Columns of a <code>data.frame</code>: dplyr</h2></hgroup><article  id="renaming-columns-of-a-data.frame-dplyr-3">
+
+<p>To rename columns in <code>dplyr</code>, you use the <code>rename</code> command</p>
+
+<pre class = 'prettyprint lang-r'>df = rename(df, X = x2)
+head(df)</pre>
+
+<pre >   x  X          y  z
+1  1  7 -0.2707606  6
+2  2  6 -1.1179372  4
+3  4 10 -1.3473558  7
+4 10 13  0.4832675 10
+5 10 13  0.1523950  5</pre>
+
+<pre class = 'prettyprint lang-r'>df = rename(df, x2 = X) # reset</pre>
+
 </article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Subsetting Columns</h2></hgroup><article  id="subsetting-columns">
 
-</article></slide><slide class=''><hgroup><h2>Subset columns of a <code>data.frame</code>: Base R</h2></hgroup><article  id="subset-columns-of-a-data.frame-base-r">
+</article></slide><slide class=''><hgroup><h2>Subset columns of a <code>data.frame</code>:</h2></hgroup><article  id="subset-columns-of-a-data.frame">
 
 <p>We can grab the <code>x</code> column using the <code>$</code> operator.</p>
 
@@ -231,7 +326,7 @@ df = data.frame(x = c(1, 2, 4, 10, 10),
 
 <pre >[1]  1  2  4 10 10</pre>
 
-</article></slide><slide class=''><hgroup><h2>Subset columns of a <code>data.frame</code>: Base R</h2></hgroup><article  id="subset-columns-of-a-data.frame-base-r-1">
+</article></slide><slide class=''><hgroup><h2>Subset columns of a <code>data.frame</code>:</h2></hgroup><article  id="subset-columns-of-a-data.frame-1">
 
 <p>We can also subset a <code>data.frame</code> using the bracket <code>[, ]</code> subsetting.</p>
 
@@ -245,7 +340,7 @@ df = data.frame(x = c(1, 2, 4, 10, 10),
 
 <pre >[1]  1  2  4 10 10</pre>
 
-</article></slide><slide class=''><hgroup><h2>Subset columns of a <code>data.frame</code>: Base R</h2></hgroup><article  id="subset-columns-of-a-data.frame-base-r-2">
+</article></slide><slide class=''><hgroup><h2>Subset columns of a <code>data.frame</code>:</h2></hgroup><article  id="subset-columns-of-a-data.frame-2">
 
 <p>We can select multiple columns using multiple column names:</p>
 
@@ -262,8 +357,7 @@ df = data.frame(x = c(1, 2, 4, 10, 10),
 
 <p>The <code>select</code> command from <code>dplyr</code> allows you to subset</p>
 
-<pre class = 'prettyprint lang-r'>library(dplyr)
-select(df, x)</pre>
+<pre class = 'prettyprint lang-r'>select(df, x)</pre>
 
 <pre >   x
 1  1
@@ -296,7 +390,7 @@ select(df, x)</pre>
 
 </article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Subsetting Rows</h2></hgroup><article  id="subsetting-rows">
 
-</article></slide><slide class=''><hgroup><h2>Subset rows of a <code>data.frame</code> with indices: Base R</h2></hgroup><article  id="subset-rows-of-a-data.frame-with-indices-base-r">
+</article></slide><slide class=''><hgroup><h2>Subset rows of a <code>data.frame</code> with indices:</h2></hgroup><article  id="subset-rows-of-a-data.frame-with-indices">
 
 <p>Let&#39;s select <strong>rows</strong> 1 and 3 from <code>df</code> using brackets:</p>
 
@@ -306,7 +400,7 @@ select(df, x)</pre>
 1 1  7 -0.2707606 6
 3 4 10 -1.3473558 7</pre>
 
-</article></slide><slide class=''><hgroup><h2>Subset rows of a <code>data.frame</code>: Base R</h2></hgroup><article  id="subset-rows-of-a-data.frame-base-r">
+</article></slide><slide class=''><hgroup><h2>Subset rows of a <code>data.frame</code>:</h2></hgroup><article  id="subset-rows-of-a-data.frame">
 
 <p>Let&#39;s select the rows of <code>df</code> where the <code>x</code> column is greater than 5 or is equal to 2. Without any index for columns, all columns are returned:</p>
 
@@ -317,7 +411,7 @@ select(df, x)</pre>
 4 10 13  0.4832675 10
 5 10 13  0.1523950  5</pre>
 
-</article></slide><slide class=''><hgroup><h2>Subset rows of a <code>data.frame</code>: Base R</h2></hgroup><article  id="subset-rows-of-a-data.frame-base-r-1">
+</article></slide><slide class=''><hgroup><h2>Subset rows of a <code>data.frame</code>:</h2></hgroup><article  id="subset-rows-of-a-data.frame-1">
 
 <p>We can subset both rows and colums at the same time:</p>
 
@@ -586,7 +680,130 @@ df[, c(&quot;newcol&quot;, cn[cn != &quot;newcol&quot;]) ]</pre>
 2       6  2 -1.1179372
 3      12  4 -1.3473558
 4      30 10  0.4832675
-5      30 10  0.1523950</pre></article></slide>
+5      30 10  0.1523950</pre>
+
+</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Perform Operations By Groups of Variables</h2></hgroup><article  id="perform-operations-by-groups-of-variables">
+
+</article></slide><slide class=''><hgroup><h2>Perform Operations By Groups: base R</h2></hgroup><article  id="perform-operations-by-groups-base-r">
+
+<p>The <code>tapply</code> command will take in a vector (<code>X</code>), perform a function (<code>FUN</code>) over an index (<code>INDEX</code>):</p>
+
+<pre class = 'prettyprint lang-r'>args(tapply)</pre>
+
+<pre >function (X, INDEX, FUN = NULL, ..., simplify = TRUE) 
+NULL</pre>
+
+</article></slide><slide class=''><hgroup><h2>Perform Operations By Groups: base R</h2></hgroup><article  id="perform-operations-by-groups-base-r-1">
+
+<p>The <code>tapply</code> command will take in a vector (<code>X</code>), perform a function (<code>FUN</code>) over an index (<code>INDEX</code>):</p>
+
+<pre class = 'prettyprint lang-r'>args(tapply)</pre>
+
+<pre >function (X, INDEX, FUN = NULL, ..., simplify = TRUE) 
+NULL</pre>
+
+</article></slide><slide class=''><hgroup><h2>Perform Operations By Groups: base R</h2></hgroup><article  id="perform-operations-by-groups-base-r-2">
+
+<p>See <code>?nasa</code> for description of the NASA spatio-temporal data, we will make a copy of it:</p>
+
+<pre class = 'prettyprint lang-r'># nasa is included in `dplyr` - converting to a data.frame
+ex_data = as.data.frame(nasa)</pre>
+
+</article></slide><slide class=''><hgroup><h2>Perform Operations By Groups: base R</h2></hgroup><article  id="perform-operations-by-groups-base-r-3">
+
+<p>Let&#39;s get the mean temperature by year:</p>
+
+<pre class = 'prettyprint lang-r'>tapply(ex_data$temperature, ex_data$year, mean)</pre>
+
+<pre >    1995     1996     1997     1998     1999     2000 
+297.2946 297.1005 297.9566 298.7028 298.1364 298.3358 </pre>
+
+</article></slide><slide class=''><hgroup><h2>Perform Operations By Groups: dplyr</h2></hgroup><article  id="perform-operations-by-groups-dplyr">
+
+<p>Let&#39;s get the mean temperature by year. We will use <code>group_by</code> to group the data by temperature, then use <code>summarize</code> (or <code>summarise</code>) to get the mean temperature:</p>
+
+<pre class = 'prettyprint lang-r'>gb = group_by(ex_data, year)
+summarize(gb, mean_temp = mean(temperature))</pre>
+
+<pre >Source: local data frame [6 x 2]
+
+   year mean_temp
+  (int)     (dbl)
+1  1995  297.2946
+2  1996  297.1005
+3  1997  297.9566
+4  1998  298.7028
+5  1999  298.1364
+6  2000  298.3358</pre>
+
+</article></slide><slide class=''><hgroup><h2>Perform Operations By Groups: dplyr with piping</h2></hgroup><article  id="perform-operations-by-groups-dplyr-with-piping">
+
+<p>Using piping, this is:</p>
+
+<pre class = 'prettyprint lang-r'>ex_data %&gt;% 
+  group_by(year) %&gt;%
+  summarise(mean_temp = mean(temperature))</pre>
+
+<pre >Source: local data frame [6 x 2]
+
+   year mean_temp
+  (int)     (dbl)
+1  1995  297.2946
+2  1996  297.1005
+3  1997  297.9566
+4  1998  298.7028
+5  1999  298.1364
+6  2000  298.3358</pre>
+
+</article></slide><slide class=''><hgroup><h2>Perform Operations By Multiple Groups: dplyr</h2></hgroup><article  id="perform-operations-by-multiple-groups-dplyr">
+
+<p>This can easily be extended using <code>group_by</code> with multiple groups:</p>
+
+<pre class = 'prettyprint lang-r'>ex_data %&gt;% 
+  group_by(year, month) %&gt;%
+  summarise(mean_temp = mean(temperature))</pre>
+
+<pre >Source: local data frame [72 x 3]
+Groups: year [?]
+
+    year month mean_temp
+   (int) (int)     (dbl)
+1   1995     1  295.1849
+2   1995     2  295.3175
+3   1995     3  296.3335
+4   1995     4  296.9587
+5   1995     5  297.7286
+6   1995     6  298.5809
+7   1995     7  299.1863
+8   1995     8  299.0660
+9   1995     9  298.4634
+10  1995    10  298.0564
+..   ...   ...       ...</pre>
+
+</article></slide><slide class=''><hgroup><h2>Perform Operations By Multiple Groups: dplyr</h2></hgroup><article  id="perform-operations-by-multiple-groups-dplyr-1">
+
+<p>This can easily be extended using <code>group_by</code> with multiple groups:</p>
+
+<pre class = 'prettyprint lang-r'>ex_data %&gt;% 
+  group_by(year, month) %&gt;%
+  summarise(mean_temp = mean(temperature))</pre>
+
+<pre >Source: local data frame [72 x 3]
+Groups: year [?]
+
+    year month mean_temp
+   (int) (int)     (dbl)
+1   1995     1  295.1849
+2   1995     2  295.3175
+3   1995     3  296.3335
+4   1995     4  296.9587
+5   1995     5  297.7286
+6   1995     6  298.5809
+7   1995     7  299.1863
+8   1995     8  299.0660
+9   1995     9  298.4634
+10  1995    10  298.0564
+..   ...   ...       ...</pre></article></slide>
 
 
   <slide class="backdrop"></slide>
